@@ -15,6 +15,8 @@ ChangeLog for RQL
 
     * #71157: bad analyze when using functions
 
+    * #71415: needs to allow outer join on rhs of final relation and in HAVING express
+
     * Select.replace must properly reset old node's parent attribute
 
     * new undo_modification context manager on select nodes
